Сделал тесты с большим покрытием Классов и Строк